bugfix/JFUIE-98 Markup edit button when no text available - Fixed by replacing the 'edit' with 'add' button when there is no markup - Also empty preview was displayed when no markup (CSS fix). bugfix/JFUIE-99 jf-actions single action mode - Fixed by checking when there is only one visible action and then setting it in the fixed actions array - Also fixed cursor icon bugfix/JFUIE-100 Fixed actions are too close to each other (jf-actions) - CSS fix

--- a/src/directives/jf_actions/jf_actions.less
+++ b/src/directives/jf_actions/jf_actions.less
@@ -40,9 +40,13 @@
 jf-actions {
   display: inline-block;
   ul.list-inline {
+    font-size: 0; // DO NOT DELETE - fixes a spacing bug (li takes place as whitespace)
     li {
-      padding: 0 0 0 7px !important;
+      padding: 0 0 0 14px !important;
       margin: 0;
+      &.dynamic-action {
+        padding: 0 0 0 7px !important;
+      }
     }
   }
   .actions-dropdown {
