--- a/src/directives/jf_markup_editor/jf_markup_editor.less
+++ b/src/directives/jf_markup_editor/jf_markup_editor.less
@@ -63,7 +63,7 @@
     overflow: auto;
     border: 1px solid #eee;
     padding: 15px;
-    .preview{
+    .preview:not(.empty-preview) {
       padding: 15px;
     }
     .no-markup{
